--- a/templates/sortie/show.html.twig
+++ b/templates/sortie/show.html.twig
@@ -348,9 +348,9 @@
                                          alt="photo de profil de {{ comment.user.pseudo }}"
                                          class="h-10 w-10 rounded-full object-cover">
                                 </div>
-                                <span class="font-semibold">
+                                <a href="{{ path('view_user_profil', {id: comment.user.id}) }}" class="font-semibold hover:text-blue-500">
                                     {{ comment.user.pseudo }}
-                                </span>
+                                </a>
                             </div>
                             <p class="p-3 whitespace-pre-wrap">{{ comment.content }}</p>
                             <div class="text-end text-gray-500">
@@ -360,6 +360,7 @@
                                 {% if is_granted('COMMENT_DELETE', comment) %}
                                     <form action="{{ path('app_comment_delete', {id: comment.id}) }}" method="post" class="inline-flex" onsubmit="return confirm('Êtes vous sûr de vouloir supprimer le commentaire :\n{{ comment.content|escape('js') }}')">
                                         <button class="px-4 py-2 border border-transparent text-sm font-medium rounded-lg text-white bg-gradient-to-r from-red-500 to-red-600 hover:from-red-600 hover:to-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 shadow-md hover:shadow-lg transform hover:-translate-y-0.5 transition-all duration-200" type="submit">Supprimer</button>
+                                        <input type="hidden" name="redirect" value="{{ path('app_sortie_show', {id: sortie.id}) }}">
                                         <input type="hidden" name="_token" value="{{ csrf_token('delete_'~comment.id) }}">
                                     </form>
                                 {% endif %}
